--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ html {
     font-family: Raleway, sans-serif;
     font-size: 16px;
     scroll-behavior: smooth;
+    overflow: hidden;
 }
 
 
@@ -108,4 +109,10 @@ body {
 #ennui {
     height: 55%;
     background: linear-gradient(90deg, rgb(54, 22, 216), white, rgb(54, 22, 216));
+}
+
+@media only screen and (max-width: 550px) {
+    html {
+        font-size: 10px;
+    }
 }
