--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
     width: 40rem;
     height: 30rem;
     padding: 5px;
-    margin: 0px auto;
+    margin: 5px auto;
     background-color: var(--color2);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgb(0, 0, 0, 1);
@@ -114,5 +114,9 @@ body {
 @media only screen and (max-width: 550px) {
     html {
         font-size: 10px;
+    }
+
+    .graph-container {
+        margin: 30px auto;
     }
 }
